--- a/docker/www.conf
+++ b/docker/www.conf
@@ -367,6 +367,8 @@ chdir = /
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
 
+clear_env = No
+
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
 ; same as the PHP SAPI:
