--- a/docker/www.conf
+++ b/docker/www.conf
@@ -367,7 +367,7 @@ chdir = /
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
 
-clear_env = No
+clear_env = no
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
